--- a/public/css/doc.css
+++ b/public/css/doc.css
@@ -14,3 +14,4 @@ p{font-size: 16px;line-height: 1.5;color: #333;margin-bottom: 10px;}
 .demo:before{content:"DEMO";display: block;position: absolute;top: 10px;left: 10px;}
 .demo-content{padding: 40px 20px 20px 20px;}
 .syntaxhighlighter{margin:0 0 10px 0!important;background: transparent !important;}
+.clearfix{overflow:hidden;}
