--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -31,3 +31,5 @@ input, textarea {
   padding: 0
 }
 table{border-spacing: 0;border-collapse: collapse; }
+td{vertical-align: middle}
+label{display: block}
