--- a/public/css/common.css
+++ b/public/css/common.css
@@ -97,7 +97,7 @@ input[type="text"]:focus {
 }
 
 .date-input {
-    background: url(../img/common/icon-date.png) 95px center no-repeat;
+    background: url(../img/common/icon-date.png) no-repeat right;
     width: 120px;
 }
 .textarea{padding: 10px;width: 360px;height: 100px; border-radius: 3px;resize: none}
@@ -163,8 +163,7 @@ input[type="text"]:focus {
 }
 .tb-body tr:nth-of-type(odd){background: #f1f1f1;}
 .tb-body tr:nth-of-type(even){background: #fff;}
-.tb-body-action{margin:0 10px;font-size: 12px; }
-.tb-body-action:link,.tb-body-action:visited,.tb-body-action:hover,.tb-body-action:active{color: #27affa}
+
 .tb-body-text{overflow: hidden;margin: 0;line-height: 13px;height: 13px;text-overflow: ellipsis;}
 /******************************** table end ********************************/
 
@@ -266,7 +265,7 @@ input[type="text"]:focus {
 .search-type{margin-top: 15px;}
 .export{padding: 42px 0 38px 26px;}
 .tb-body{text-align: center}
-
+.tb-body-action{margin:0 10px; }
 /******************************** 查询条件选择 end ********************************/
 
 
@@ -327,3 +326,12 @@ select.ddl-province,select.ddl-city,select.ddl-county{float: left;margin-right: 
 .ui-image-upload-img{display: block;height: 100%;width: 100%;}
 .ui-image-upload-file{position: absolute;left: 0;top: 0;width: 100%;height: 100%;opacity: 0;cursor: pointer}
 .ui-image-upload-tip{position: absolute;height:14px;line-height: 14px;padding-left: 10px;top: 50%;margin-top: -7px;font-size: 12px;left: 60px;width: 100%;}
+
+/***************** 链接 ****************/
+/*蓝色的链接*/
+.link-blue,
+.tb-body-action,
+.tb-body-action:visited,
+.tb-body-action:hover,
+.tb-body-action:active,
+.tb-body-action:focus{font-size: 12px;color: #27affa;outline: none}
