--- a/html/index.ejs
+++ b/html/index.ejs
@@ -354,6 +354,32 @@
                     </div>
                 </div>
 
+                <!--省市区三级联动-->
+                <div>
+                    <a class="anchor"></a>
+                    <h2>省市区三级联动</h2>
+                    <p>ddl-province中的option需要通过php自己组织数据，js中执行$("#id").chinaData()即可，后面两个会用js自己填充数据</p>
+                    <div class="demo">
+                        <div class="demo-content">
+                            <div id="id" class="clearfix">
+                                <select class="ddl-province select"></select>
+                                <select class="ddl-city select"></select>
+                                <select class="ddl-county select"></select>
+                            </div>
+                        </div>
+                        <div class="demo-code">
+                            <pre class="brush:html">
+                               <div id="id" class="clearfix">
+                                   <select class="ddl-province select"></select>
+                                   <select class="ddl-city select"></select>
+                                   <select class="ddl-county select"></select>
+                               </div>
+                            </pre>
+                        </div>
+                    </div>
+                </div>
+
+
                 <!--表格上方查询-->
                 <div>
                     <a class="anchor"></a>
