--- a/html/index.ejs
+++ b/html/index.ejs
@@ -379,6 +379,29 @@
                     </div>
                 </div>
 
+                <!--tab标签-->
+                <div>
+                    <a class="anchor"></a>
+                    <h2>tab标签</h2>
+                    <div class="demo">
+                        <div class="demo-content">
+                            <div class="ui-tab clearfix">
+                                <a class="active" href="">二维码取票</a>
+                                <a href="">手机号码取票</a>
+                                <a href="">重新打票</a>
+                            </div>
+                        </div>
+                        <div class="demo-code">
+                            <pre class="brush:html">
+                                <div class="ui-tab clearfix">
+                                    <a class="active" href="">二维码取票</a>
+                                    <a href="">手机号码取票</a>
+                                    <a href="">重新打票</a>
+                                </div>
+                            </pre>
+                        </div>
+                    </div>
+                </div>
 
                 <!--表格上方查询-->
                 <div>
